first try at virtual IPs (not working)

--- a/roles/pfsense/tasks/main.yml
+++ b/roles/pfsense/tasks/main.yml
@@ -11,7 +11,7 @@
     with_items:
     - { name: adservers,
         type: host,
-        address: "172.16.10.10 172.16.10.11"
+        address: "172.16.10.10 172.16.10.11",
         descr: "Active Directory Servers",
         detail: "ad1||ad2" }
     - "{{ pfsense_aliases }}"
